--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -26,17 +26,14 @@ jobs:
           npm init -y
           npm install axios ali-oss
         
-      - name: Fetch and convert data
+      - name: Fetch data and upload to OSS
         run: node scripts/fetch-feishu-data.js
         env:
           FEISHU_APP_ID: ${{ secrets.FEISHU_APP_ID }}
           FEISHU_APP_SECRET: ${{ secrets.FEISHU_APP_SECRET }}
           FEISHU_SPREADSHEET_TOKEN: ${{ secrets.FEISHU_SPREADSHEET_TOKEN }}
-        
-      - name: Upload to Aliyun OSS
-        run: node scripts/upload-to-oss.js
-        env:
           OSS_REGION: ${{ secrets.OSS_REGION }}
           OSS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
           OSS_ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
           OSS_BUCKET: ${{ secrets.OSS_BUCKET }}
+          OSS_FILE_PATH: ${{ secrets.OSS_FILE_PATH || 'data/app-data.json' }}
